--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,14 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="./index.css">
+    <title>Document</title>
+</head>
+<body>
+    <div class="header"></div>    
+    <div class="sidebar-right"></div>
+    <div class="sidebar-left"></div>
+    <div class="content"></div>
+    <div class="footer"></div>
+</body>
+</html>
