--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,20 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="./index.css">
+    <title>Document</title>
+</head>
+<body>
+    <div class="solid-box">
+        <div class="purple-rectangle"></div>
+        <div class="green-rectangle"></div>
+        <div class="blue-circle"></div>
+    </div>
+    <div class="dotted-box">
+        <div class="cream-box"></div>
+    </div>
+    <div class="shadow-box">
+        <div class="text"><h1>HELLO FRIENDS</h1></div>
+    </div>
+</body>
+</html>
