--- a/third/index.html
+++ b/third/index.html
@@ -1,1 +1,22 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="./index.css">
+    <title>Document</title>
+</head>
+<body>
+    <div class="header">
+        <div class="icon-box"></div>
+    </div>
+    <div class="content">
+        <h1>
+            Consider hiding the status bar-and all other app UI-while people are actively viewing full-screen media. If you hide the status bar, be sure to let people retrieve it (and the approprate app UI) with a single tap. Unless you have a compelling reason to do so, avoid defining a custiom gesture to redisplay the status bar because users are unlikely to discover such a gesture or to remember it.
+        </h1>
+    </div>
+    <div class="bar1"></div>
+    <div class="bar2"></div>
+    <div class="bar3"></div>
+    <div class="bar4"></div>
+    
+</body>
+</html>
